welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:5: error: Unmatched closing brace '}' ignored here
  avance();baisseBrosse();leveBrosse()}
                                      ^